--- a/serverapi/forum/src/assets/i18n/Englisch.json
+++ b/serverapi/forum/src/assets/i18n/Englisch.json
@@ -8,18 +8,30 @@
     "USERNAME": "Username",
     "PASSWORD": "Password",
     "LOGINMESSAGE": "Please login to do more things",
-    "NEWNAME": "new Username",
-    "NEWPW": "new Password",
-    "NEWUSER": "create a new User",
+    "NEWNAME": "New Username",
+    "NEWPW": "New Password",
+    "NEWUSER": "Create a new User",
     "ADMIN": "Administrator",
     "USERINFO": "Userinformation",
     "OPTIONS": "Options",
-    "NEWTITLE": "new title",
-    "NEWTOPIC": "new topic",
-    "NEWCONTENT": "new content",
-    "COMMENTTITLE": "title of comment",
-    "COMMENTCONTENT": "content of comment",
-    "EDIT": "edit",
-    "ADD": "add",
-    "CREATEFROM": "create from"
+    "NEWTITLE": "New title",
+    "NEWTOPIC": "New topic",
+    "NEWCONTENT": "New content",
+    "COMMENTTITLE": "Title of comment",
+    "COMMENTCONTENT": "Content of comment",
+    "EDIT": "Edit",
+    "ADD": "Add",
+    "CREATEFROM": "Created from",
+    "LOGINFB": "Login with Facebook",
+    "FIRSTNAME": "Firstname",
+    "LASTNAME": "Lastname",
+    "STREET": "Street",
+    "NUMBER": "Number",
+    "ZIP": "ZIP",
+    "TOWN": "Town",
+    "COUNTRY": "Country",
+    "NAME": "Name",
+    "ADRESS": "Adress",
+    "BIRTHDAY": "Birthday" ,
+    "CREATEUSER": "Create a new User"
 }
